--- a/Samples/UserInfo/cppwinrt/UserInfoCppWinRt.vcxproj
+++ b/Samples/UserInfo/cppwinrt/UserInfoCppWinRt.vcxproj
@@ -90,6 +90,7 @@
     <ApplicationDefinition Include="App.xaml">
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="..\..\..\SharedContent\xaml\Styles.xaml" />
     <Page Include="MainPage.xaml">
       <SubType>Designer</SubType>
     </Page>
@@ -101,13 +102,13 @@
     <None Include="UserInfoCppWinRt_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="Assets\LockScreenLogo.scale-200.png" />
-    <Image Include="Assets\SplashScreen.scale-200.png" />
-    <Image Include="Assets\Square150x150Logo.scale-200.png" />
-    <Image Include="Assets\Square44x44Logo.scale-200.png" />
-    <Image Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
-    <Image Include="Assets\StoreLogo.png" />
-    <Image Include="Assets\Wide310x150Logo.scale-200.png" />
+    <Image Include="..\..\..\SharedContent\media\microsoft-sdk.png" />
+    <Image Include="..\..\..\SharedContent\media\smalltile-sdk.png" />
+    <Image Include="..\..\..\SharedContent\media\splash-sdk.png" />
+    <Image Include="..\..\..\SharedContent\media\squaretile-sdk.png" />
+    <Image Include="..\..\..\SharedContent\media\storelogo-sdk.png" />
+    <Image Include="..\..\..\SharedContent\media\tile-sdk.png" />
+    <Image Include="..\..\..\SharedContent\media\windows-sdk.png" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
