--- a/Samples/UserInfo/cppwinrt/UserInfoCppWinRt.vcxproj.filters
+++ b/Samples/UserInfo/cppwinrt/UserInfoCppWinRt.vcxproj.filters
@@ -5,44 +5,45 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="MainPage.xaml" />
+    <Page Include="..\..\..\SharedContent\xaml\Styles.xaml">
+      <Filter>Styles</Filter>
+    </Page>
   </ItemGroup>
   <ItemGroup>
-    <Midl Include="App.idl"/>
-    <Midl Include="MainPage.idl"/>
+    <Midl Include="App.idl" />
+    <Midl Include="MainPage.idl" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="App.cpp"/>
-    <ClCompile Include="MainPage.cpp"/>
-    <ClCompile Include="Generated Files\module.g.cpp">
-        <Filter>Generated Files</Filter>
-    </ClCompile>
+    <ClCompile Include="App.cpp" />
+    <ClCompile Include="MainPage.cpp" />
+    <ClCompile Include="Generated Files\module.g.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
-    <ClCompile Include="App.h"/>
-    <ClCompile Include="MainPage.h"/>
+    <ClInclude Include="App.h" />
+    <ClInclude Include="MainPage.h" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="Assets\Wide310x150Logo.scale-200.png">
+    <Image Include="..\..\..\SharedContent\media\microsoft-sdk.png">
       <Filter>Assets</Filter>
     </Image>
-    <Image Include="Assets\StoreLogo.png">
+    <Image Include="..\..\..\SharedContent\media\smalltile-sdk.png">
       <Filter>Assets</Filter>
     </Image>
-    <Image Include="Assets\Square150x150Logo.scale-200.png">
+    <Image Include="..\..\..\SharedContent\media\splash-sdk.png">
       <Filter>Assets</Filter>
     </Image>
-    <Image Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png">
+    <Image Include="..\..\..\SharedContent\media\squaretile-sdk.png">
       <Filter>Assets</Filter>
     </Image>
-    <Image Include="Assets\Square44x44Logo.scale-200.png">
+    <Image Include="..\..\..\SharedContent\media\storelogo-sdk.png">
       <Filter>Assets</Filter>
     </Image>
-    <Image Include="Assets\SplashScreen.scale-200.png">
+    <Image Include="..\..\..\SharedContent\media\tile-sdk.png">
       <Filter>Assets</Filter>
     </Image>
-    <Image Include="Assets\LockScreenLogo.scale-200.png">
+    <Image Include="..\..\..\SharedContent\media\windows-sdk.png">
       <Filter>Assets</Filter>
     </Image>
   </ItemGroup>
@@ -55,6 +56,9 @@
   <ItemGroup>
     <Filter Include="Assets">
       <UniqueIdentifier>{e48dc53e-40b1-40cb-970a-f89935452892}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Styles">
+      <UniqueIdentifier>{b4a49433-d8c4-482a-b465-8b4384fef306}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
