Adding FeatureName() and Scenarios() to MainPage.
When methods in MainPage need the feature name or the scenarios they now call these methods that are implemented in SampleConfiguration.cpp.

Now MainPage.idl/.h/.idl are closer to being 'generic' so that they can be moved to SharedContent.

--- a/Samples/UserInfo/cppwinrt/UserInfoCppWinRt.vcxproj
+++ b/Samples/UserInfo/cppwinrt/UserInfoCppWinRt.vcxproj
@@ -137,6 +137,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </ClCompile>
     <ClCompile Include="Generated Files\module.g.cpp" />
+    <ClCompile Include="SampleConfiguration.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="App.idl">
