--- a/Samples/UserInfo/cppwinrt/UserInfoCppWinRt.vcxproj
+++ b/Samples/UserInfo/cppwinrt/UserInfoCppWinRt.vcxproj
@@ -91,6 +91,14 @@
     <ClInclude Include="..\..\..\SharedContent\cppwinrt\MainPage.h">
       <DependentUpon>..\..\..\SharedContent\cpp\MainPage.xaml</DependentUpon>
     </ClInclude>
+    <ClInclude Include="Scenario1_FindUsers.h">
+      <DependentUpon>Scenario1_FindUsers.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </ClInclude>
+    <ClInclude Include="Scenario2_WatchUsers.h">
+      <DependentUpon>Scenario2_WatchUsers.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="..\..\..\SharedContent\xaml\App.xaml">
@@ -100,6 +108,12 @@
       <Link>Styles\Styles.xaml</Link>
     </Page>
     <Page Include="..\..\..\SharedContent\cpp\MainPage.xaml">
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Scenario1_FindUsers.xaml">
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Scenario2_WatchUsers.xaml">
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
@@ -144,6 +158,14 @@
     </ClCompile>
     <ClCompile Include="Generated Files\module.g.cpp" />
     <ClCompile Include="SampleConfiguration.cpp" />
+    <ClCompile Include="Scenario1_FindUsers.cpp">
+      <DependentUpon>Scenario1_FindUsers.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </ClCompile>
+    <ClCompile Include="Scenario2_WatchUsers.cpp">
+      <DependentUpon>Scenario2_WatchUsers.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Midl Include="..\..\..\SharedContent\cppwinrt\App.idl">
@@ -151,6 +173,14 @@
     </Midl>
     <Midl Include="..\..\..\SharedContent\cppwinrt\MainPage.idl">
       <DependentUpon>..\..\..\SharedContent\cpp\MainPage.xaml</DependentUpon>
+    </Midl>
+    <Midl Include="Scenario1_FindUsers.idl">
+      <DependentUpon>Scenario1_FindUsers.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Midl>
+    <Midl Include="Scenario2_WatchUsers.idl">
+      <DependentUpon>Scenario2_WatchUsers.xaml</DependentUpon>
+      <SubType>Code</SubType>
     </Midl>
   </ItemGroup>
   <ItemGroup>
