--- a/Samples/UserInfo/cppwinrt/UserInfoCppWinRt.vcxproj.filters
+++ b/Samples/UserInfo/cppwinrt/UserInfoCppWinRt.vcxproj.filters
@@ -8,8 +8,8 @@
     <Page Include="..\..\..\SharedContent\xaml\Styles.xaml">
       <Filter>Styles</Filter>
     </Page>
-    <Page Include="Scenario1_FindUsers.xaml" />
-    <Page Include="Scenario2_WatchUsers.xaml" />
+    <Page Include="..\shared\Scenario1_FindUsers.xaml" />
+    <Page Include="..\shared\Scenario2_WatchUsers.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="..\..\..\SharedContent\cppwinrt\App.idl" />
