Fixing UserInfoCppWinRt for VS 2017 15.8
Turning off 'Conformance mode' option (removing /permissive- switch).

This was causing an error compiling the C++/WinRt headers.
The error was in winrt/base.h, the identifier from_abi was not found in multiple places.

Also, the .filters file was 'fixed' by the VS update.

--- a/Samples/UserInfo/cppwinrt/UserInfoCppWinRt.vcxproj.filters
+++ b/Samples/UserInfo/cppwinrt/UserInfoCppWinRt.vcxproj.filters
@@ -36,7 +36,7 @@
     <ClInclude Include="..\..\..\SharedContent\cppwinrt\MainPage.h" />
     <ClInclude Include="Scenario1_FindUsers.h" />
     <ClInclude Include="Scenario2_WatchUsers.h" />
-    <ClCompile Include="UserViewModel.h" />
+    <ClInclude Include="UserViewModel.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\SharedContent\media\microsoft-sdk.png">
